# Anonymisation

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_DEEPPAVLOV_REMOVAL.md  LICENSE  README.md  README_NEW.md  RUPTA_RECAP.md  START_HERE.md  STRUCTURE.md  TODO_RUPTA.md  TODO_note.md  config.json  eval_rupta_dbbio.py  eval_tab.py  main_eval.py  notebook_eval.ipynb  preds_tab_L0_test.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_ablation_full.sh  run_researchclaw_gpu.sh  verify_imports.py
.claude/: settings.local.json
.github/: copilot-instructions.md
Atlas_anno/: .env.example  README.md  pyproject.toml
Atlas_anno/configs/: defaults.yaml  evaluation.yaml  ontology.yaml
Atlas_anno/docs/: benchmark_protocol.md  cadrage_projet_dataset_synthetique_anonymisation.md  dataset_card.md  product_requirements.md  threat_model.md
Atlas_anno/prompts/anonymizer/: system.txt
Atlas_anno/prompts/attacker/: system.txt
Atlas_anno/prompts/character_builder/: system.txt
Atlas_anno/prompts/hardness_oracle/: system.txt
Atlas_anno/prompts/llm_text_generator/: system.txt
Atlas_anno/prompts/llm_text_naturalizer/: system.txt
Atlas_anno/prompts/preannotation/: system.txt
Atlas_anno/prompts/realism_judge/: system.txt
Atlas_anno/prompts/scenario_planner/: system.txt
Atlas_anno/prompts/text_generator/: system.txt
Atlas_anno/prompts/world_builder/: system.txt
Atlas_anno/scripts/label_studio/: create_project.py  export_annotations.py  import_tasks.py  start_local.sh  sync_reviewed.py
Atlas_anno/src/atlas_anno/: __init__.py  cli.py  config.py  console.py  constants.py  diagnostics.py  io.py  llm.py  paths.py  prompts.py  records.py  runtime.py  schemas.py  settings.py  storage.py  surface_grounding.py
Atlas_anno/src/atlas_anno/annotation/: __init__.py  preannotator.py
Atlas_anno/src/atlas_anno/anonymization/: __init__.py  baselines.py
Atlas_anno/src/atlas_anno/attacks/: __init__.py  llm_attacker.py  pairs.py  structured.py
Atlas_anno/src/atlas_anno/dashboard/: __init__.py  analysis.py  app.py  indicators.py
Atlas_anno/src/atlas_anno/evaluation/: aggregate.py  calibration.py  diversity.py  privacy.py  realism_judge.py  register_conformance.py  reid.py  spans.py  utility.py
Atlas_anno/src/atlas_anno/export/: parquet_export.py
Atlas_anno/src/atlas_anno/generation/: __init__.py  attribute_sampler.py  auditor.py  character_builder.py  llm_generation.py  llm_text_generator.py  naturalization.py  pipeline.py  scenario_planner.py  style_sampler.py  surface_forms.py  text_generator.py  world_builder.py
Atlas_anno/src/atlas_anno/reporting/: builder.py
Atlas_anno/src/atlas_anno/review/: __init__.py  label_studio.py  label_studio_api.py
Atlas_anno/tests/: test_anonymization.py  test_attack_pairs.py  test_attackers.py  test_attribute_sampling.py  test_auditor_extended.py  test_calibration.py  test_contextual_cues.py  test_dashboard_analysis.py  test_dashboard_cli.py  test_diversity_metrics.py  test_generation.py  test_generation_parallel.py  test_integration.py  test_label_studio_api.py  test_llm_text_generator.py  test_llm_v11.py  test_naturalization.py  test_parquet_export.py  test_preannotation_parallel.py  test_realism_controls.py  test_reporting.py  test_review_export.py  test_schema_compat.py  test_schemas.py  test_settings.py  test_style_factors.py  test_surface_grounding.py
anonymization_pipeline_refactored/: README.md  __init__.py  requirements.txt
api/: __init__.py  app.py  routes.py
configs/: README.md
debug_dump/: preds_tab_L0_test.json
docs/: MIGRATION_GPU.md  QUICKSTART_NER_GPU.md  README.md  RUPTA_INTEGRATION.md
eval/: README.md  __main__.py  ablation_study.py  analyze_errors.py  api.py  benchmark_pipeline.py  conll2003_loader.py  errors_tab.csv  evaluate.py  evaluate_pipeline.py  evaluate_tab_pipegraph.py  metrics.py  pipegraph_eval_local.py  ratbench_loader.py  registry.py  run_ablation.py  run_full_benchmark.py  run_pipeline_evaluation.py  run_store.py
new_pipeline/: QUICKSTART.md  config.json  patterns_config.yaml  requirements.txt  test_exhaustif.py
notebooks/: demo_anonymization.ipynb
pipegraph/: README.md  __init__.py  __main__.py  api.py  cli.py  config.json  main.py  requirements.txt
pipeline/: QUICKSTART.md  config.json  patterns_config.yaml  requirements.txt
results/: README.md
scripts/: README.md  __init__.py  add_long_tickets.py  add_merged_ticket.py  add_quasi_id_data.py  append_more_hard.py  compare_baseline_rupta.py  convert_tab_dataset.py  eval_rupta_pipeline.py  evaluate.py  examples_ner_gpu.py  examples_rupta.py  generate_hard_dataset.py  quickstart.sh  run_benchmarks.py  run_eval.sh  run_rupta_eval.sh  test_python311_compat.py  test_rupta_integration.py  translate_hard_dataset.py  (+3 more)
src/: policy.py  (+9 more)
(+452 files in other folders)
