[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymisation"
version = "2.0.0"
description = "Advanced text anonymization system with RUPTA privacy-utility optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["anonymization", "privacy", "nlp", "ner", "llm", "rupta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "geonamescache>=2.0.0",
    "schwifty>=2024.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "gliner>=0.2.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "langdetect>=1.0.9",
    "spacy>=3.7.0",
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "intervaltree>=3.1.0",
    "gdown>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
gpu = [
    "torch>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/anonymisation"
Documentation = "https://github.com/yourusername/anonymisation/docs"
Repository = "https://github.com/yourusername/anonymisation"
Issues = "https://github.com/yourusername/anonymisation/issues"

[project.scripts]
anonymize = "api.app:main"

[tool.setuptools]
packages = ["src", "api", "tests"]

[tool.setuptools.package-data]
src = ["**/*.json", "**/*.txt"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
